@@ -19,25 +19,32 @@ function extension_uploader_extensions() {
 	
 	if (!check_acl($config['id_user'], 0, "PM")) {
 		db_pandora_audit("ACL Violation",
-				"Trying to access Group Management");
+			"Trying to access Group Management");
 		require ("general/noaccess.php");
 		
 		return;
 	}
 	
-	ui_print_page_header (__("Uploader extension"), "images/extensions.png", false, "", true, "");
-
+	ui_print_page_header (__("Uploader extension"),
+		"images/extensions.png", false, "", true, "");
+	
 	$upload = (bool)get_parameter('upload', 0);
+	$upload_enteprise = (bool)get_parameter('upload_enterprise', 0);
 	
 	if ($upload) {
 		$error = $_FILES['extension']['error'];
 		
-		if ($error == 0) {			
+		if ($error == 0) {
 			$zip = new ZipArchive;
 			
 			$tmpName = $_FILES['extension']['tmp_name'];
 			
-			$pathname = $config['homedir'] . '/' . EXTENSIONS_DIR . '/';
+			if ($upload_enteprise) {
+				$pathname = $config['homedir'] . '/' . ENTERPRISE_DIR . '/' . EXTENSIONS_DIR . '/';
+			}
+			else {
+				$pathname = $config['homedir'] . '/' . EXTENSIONS_DIR . '/';
+			}
 			
 			if ($zip->open($tmpName) === true) {
 				$result = $zip->extractTo($pathname);
@@ -57,7 +64,7 @@ function extension_uploader_extensions() {
 		ui_print_result_message ($result, __('Success to upload extension'),
 			__('Fail to upload extension'));
 	}
-
+	
 	$table = null;
 	
 	$table->width = '98%';
@@ -65,6 +72,10 @@ function extension_uploader_extensions() {
 	$table->data[0][0] = __('Upload extension');
 	$table->data[0][1] = html_print_input_file('extension', true) .
 		ui_print_help_tip (__("Upload the extension as a zip file."), true);
+	if (enterprise_installed()) {
+		$table->data[0][2] = __('Upload enterprise extension') . "&nbsp;" .
+			html_print_checkbox('upload_enterprise', 1, false, true);
+	}
 	
 	echo "<form method='post' enctype='multipart/form-data'>";
 	html_print_table($table);
