@@ -1,3 +1,13 @@
+2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_html.php, include/functions.php: cleaned source
+	code style.
+	
+	* extensions/extension_uploader.php: fixed the upload enterprise
+	extension.
+	
+	Fixes: #3532208
+
 2012-06-20  Hirofumi Kosaka  <kosaka@rworks.jp>
 
 	* extensions/net_tools.php: Fixed bug: 'whereis' could find a
